5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1646_651.log
== TEST (2019-04-09 16:22:39) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = float(input("Digite o sexo: (M/F) "))
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == M): 
	print(round(M,2))
else:
	print(round(F,2))
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    sexo = float(input())
ValueError: could not convert string to float: 'F'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:23:23) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = float(input("Digite o sexo: (M/F) "))
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == "M"): 
	print(round(M,2))
else:
	print(round(F,2))
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    sexo = float(input())
ValueError: could not convert string to float: 'F'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:24:11) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = float(input("Digite o sexo: (M/F) "))
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == "M"): 
	print(round(M,2))
else (sexo == "F"):
	print(round(F,2))
			

-- ERROR:
File "XXXX", line 7
    else (sexo == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:24:52) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = float(input("Digite o sexo: (M/F) "))
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == "M"): 
	print(round(M,2))
else 
	print(round(F,2))
			

-- ERROR:
File "XXXX", line 7
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:25:18) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = float(input("Digite o sexo: (M/F) "))
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == "M"): 
	print(round(M,2))
else (sexo == "F"):
	print(round(F,2))
			

-- ERROR:
File "XXXX", line 7
    else (sexo == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:25:19) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = float(input("Digite o sexo: (M/F) "))
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == "M"): 
	print(round(M,2))
else (sexo == "F"):
	print(round(F,2))
			

-- ERROR:
File "XXXX", line 7
    else (sexo == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:25:19) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = float(input("Digite o sexo: (M/F) "))
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == "M"): 
	print(round(M,2))
else (sexo == "F"):
	print(round(F,2))
			

-- ERROR:
File "XXXX", line 7
    else (sexo == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:26:39) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = float(input("Digite o sexo: (M/F) "))
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == "M"): 
	print(round(M,2))
else:
	print(round(F,2))
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    sexo = float(input())
ValueError: could not convert string to float: 'F'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:00) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = (input("Digite o sexo: (M/F) ")
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == "M"): 
	print(round(M,2))
else:
	print(round(F,2))
			

-- ERROR:
File "XXXX", line 3
    M = (72.7 * altura) - 58
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:33) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = (input("Digite o sexo: (M/F) ")
M = ((72.7 * altura) - 58)
F = ((62.1 * altura) - 44.7)
if (sexo == "M"): 
	print(round(M,2))
else:
	print(round(F,2))
			

-- ERROR:
File "XXXX", line 3
    M = ((72.7 * altura) - 58)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:18) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = (input("Digite o sexo: (M/F) ")
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == "M"): 
	print(round(M,2))
else:
	print(round(F,2))
			

-- ERROR:
File "XXXX", line 3
    M = (72.7 * altura) - 58
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:31:00) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = (input("Digite o sexo: (M/F) ")
m = (72.7 * altura) - 58
f = (62.1 * altura) - 44.7
if (sexo == "m"):
	print(round(m,2))
else:
	print(round(f,2))
			

-- ERROR:
File "XXXX", line 3
    m = (72.7 * altura) - 58
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:31:26) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = input("Digite o sexo: ")
m = (72.7 * altura) - 58
f = (62.1 * altura) - 44.7
if (sexo == "m"):
	print(round(m,2))
else:
	print(round(f,2))
			

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:31:35) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = input("Digite o sexo: ")
m = (72.7 * altura) - 58
f = (62.1 * altura) - 44.7
if (sexo == "m"):
	print(round(m,2))
else:
	print(round(f,2))
			

-- EXECUTION TIME:
0.170345
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:33:44) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = input("Digite o sexo: ")
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == "M"):
	print(round(M,2))
else:
	print(round(F,2))
			

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:33:52) 
-- CODE:
altura = float(input("Digite a altura: ")) 
sexo = input("Digite o sexo: ")
M = (72.7 * altura) - 58
F = (62.1 * altura) - 44.7
if (sexo == "M"):
	print(round(M,2))
else:
	print(round(F,2))
			

-- EXECUTION TIME:
0.145436
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
